a potentially cleaner approach